# gb-ds

./: .gitignore  1and2.ipynb  Additional.ipynb  book_info.pkl  fourth  fourth_output  hm4.py  homework1.py  homework3.py  house prices.ipynb  hw1.ipynb  hw2.py  hw5.py  hw6.py  hw7.py  hw8.py  hwLesson2Library.ipynb  hwLibrary.ipynb  hwpandas.ipynb  hwwithoutteacher.ipynb  pyproject.toml  second  seventh  task4.ipynb  third
